<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">医会宝</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!-- WXPayEntryActivity -->
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false" tools:ignore="StringFormatInvalid">微信支付结果：%s</string>


    <string name="string_state_ready">准备</string>
    <string name="string_state_preparing">准备中</string>
    <string name="string_state_connecting">连接中</string>
    <string name="string_state_streaming">推流中</string>

    <string name="flash_light_on">ON</string>
    <string name="flash_light_off">OFF</string>

    <string name="cd_tv_log_info">cd_tv_log_info</string>
    <string name="cd_btn_camera_switcher">cd_btn_camera_switcher</string>
    <string name="cd_tv_stream_status">cd_tv_stream_status</string>
    <string name="cd_btn_torch">cd_btn_torch</string>
    <string name="cd_btn_capture">cd_btn_capture</string>
    <string name="cd_btn_orientation">cd_btn_orientation</string>
    <string name="cd_btn_mute">cd_btn_mute</string>
    <string name="cd_btn_fb">cd_btn_fb</string>
    <string name="cd_tv_streaming_state_hint">cd_tv_streaming_state_hint</string>
    <string name="cd_shutter_button">cd_shutter_button</string>
    <string name="cd_preview_mirror">cd_preview_mirror</string>
    <string name="cd_encoding_mirror">cd_encoding_mirror</string>

    <string name="rc_send">发送</string>
    <string name="title_activity_identity"></string>
    <string name="title_activity_my_wallet">MyWalletActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--添加银行卡-->
    <string name="add_bank_account">添加银行卡</string>
    <string name="tip">请先绑定公司的银行卡</string>
    <string name="name">姓名</string>
    <string name="input_name">请输入收款人姓名</string>
    <string name="bank">银行</string>
    <string name="input_bank">请输入银行名称</string>
    <string name="accounts_bank">开户支行</string>
    <string name="input_accounts_bank">请输入开户支行</string>
    <string name="bank_number">卡号</string>
    <string name="input_bank_number">请输入卡号</string>
    <string name="phone">联系电话</string>
    <string name="input_phone_number">请输入手机号</string>
    <string name="identity_number">身份证号</string>
    <string name="input_identity_number">请输入身份证号</string>
    <string name="identity_photo">身份证正面照</string>
    <string name="code">验证码</string>
    <string name="input_code">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="save">保存</string>
    <string name="title_activity_activate">Activate</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_rights">RightsActivity</string>
    <string name="title_activity_update_user_info_nick_name">UpdateUserInfoNickNameActivity</string>
    <string name="title_activity_update_user_info_description">UpdateUserInfoDescriptionActivity
    </string>
    <string name="title_activity_update_user_info_area">UpdateUserInfoAreaActivity</string>


    <string name="tab_index_title">首页</string>
    <string name="tab_meeting_title">会议</string>
    <string name="tab_live_title">直播</string>
    <string name="tab_me_title">个人</string>

    <string name="my_meeting">我的参会</string>
    <string name="my_live">我的直播</string>
    <string name="my_video">我的视频</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_order">我的订单</string>
    <string name="my_wallet">我的钱包</string>

    <string name="follower">粉丝</string>
    <string name="follow">关注</string>

    <string name="settings">设置</string>
    <string name="version">当前版本</string>
    <string name="cache">清除缓存</string>
    <string name="update_version">更新版本</string>
    <string name="exit">退出当前账号</string>

</resources>
