<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="24dp"
    tools:context="com.medmeeting.m.zhiyi.UI.WalletView.BankAccountNumberAddActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="2dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:elevation="2dp"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            tools:targetApi="lollipop">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/add_bank_account"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="always">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey1" />

            <TextView
                android:id="@+id/tip"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#E6F3FF"
                android:gravity="center_vertical|start"
                android:paddingStart="20dp"
                android:text="@string/tip"
                android:textColor="#3094FA"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="1dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/accountName0"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/name"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/accountName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edittext_delete_line"
                    android:hint="@string/input_name"
                    android:maxLines="1"
                    android:paddingLeft="18dp"
                    android:paddingRight="18dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="1dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/bank"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/bankName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edittext_delete_line"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:paddingLeft="18dp"
                    android:paddingRight="18dp"
                    android:text="@string/input_bank"
                    android:textColor="@color/grey"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="1dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/accounts_bank"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/bankAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edittext_delete_line"
                    android:gravity="center_vertical"
                    android:hint="@string/input_accounts_bank"
                    android:maxLines="1"
                    android:paddingLeft="18dp"
                    android:paddingRight="18dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="1dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/bank_number"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/accountNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edittext_delete_line"
                    android:hint="@string/input_bank_number"
                    android:maxLines="1"
                    android:paddingLeft="18dp"
                    android:paddingRight="18dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="1dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/phone"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/mobilePhone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edittext_delete_line"
                    android:hint="@string/input_phone_number"
                    android:maxLines="1"
                    android:paddingLeft="18dp"
                    android:paddingRight="18dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/identity_rlyt"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="1dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/identity_number"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/identityNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edittext_delete_line"
                    android:hint="@string/input_identity_number"
                    android:maxLines="1"
                    android:paddingLeft="18dp"
                    android:paddingRight="18dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/identity_image_lyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/identity_photo"
                    android:textColor="@color/black" />

                <ImageView
                    android:id="@+id/identityImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:scaleType="fitXY"
                    android:src="@mipmap/wallet_add_identity_number_icon"
                    android:contentDescription="TODO" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/code"
                    android:textColor="@color/black" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/code"
                        android:layout_width="match_parent"
                        android:layout_height="47dp"
                        android:layout_toStartOf="@+id/get_code_textview"
                        android:background="@null"
                        android:hint="@string/input_code"
                        android:imeActionLabel="Sign in"
                        android:imeOptions="actionUnspecified"
                        android:inputType="number"
                        android:maxLines="1"
                        android:paddingStart="18dp"
                        android:paddingEnd="28dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/grey"
                        android:textColorHint="@color/grey"
                        android:textColorLink="@color/grey"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/get_code_textview"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/textview_radius_blue"
                        android:gravity="center"
                        android:text="@string/get_code"
                        android:textColor="@color/grey" />
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/confirm"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/textview_all_blue2"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
