<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="24dp">

    <com.qiniu.pili.droid.streaming.widget.AspectFrameLayout
        android:id="@+id/cameraPreview_afl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <com.medmeeting.m.zhiyi.UI.LiveView.live.CameraPreviewFrameView
            android:id="@+id/cameraPreview_surfaceView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />

        <include layout="@layout/focus_indicator" />

    </com.qiniu.pili.droid.streaming.widget.AspectFrameLayout>

    <TextView
        android:id="@+id/log_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/cd_tv_log_info"
        android:visibility="gone"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:labelFor="@+id/haha"
        android:visibility="gone" />

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="right|top"
        android:layout_margin="10dp"
        android:background="@mipmap/icon_logout"
        android:contentDescription="@string/cd_btn_orientation"
        android:textColor="@color/pldroid_streaming_white" />

    <Button
        android:id="@+id/people_sum_btn"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_gravity="left|top"
        android:layout_margin="10dp"
        android:background="@mipmap/live_people_sum"
        android:contentDescription="@string/cd_btn_orientation"
        android:textColor="@color/pldroid_streaming_white"
        android:paddingLeft="24dp"
        android:text=""/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|top"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="gone">

        <include
            layout="@layout/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/stream_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cd_tv_stream_status"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/pldroid_streaming_white"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="gone">

        <Button
            android:id="@+id/preview_mirror_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_preview_mirror"
            android:text="Mirror\n(Preview)"
            android:textColor="@color/pldroid_streaming_white" />

        <Button
            android:id="@+id/encoding_mirror_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_encoding_mirror"
            android:text="Mirror\n(Encode)"
            android:textColor="@color/pldroid_streaming_white" />
    </LinearLayout>

   <!-- <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/chat_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:background="@mipmap/live_chat_btn"
            android:contentDescription="@string/cd_btn_camera_switcher"
            android:textColor="@color/pldroid_streaming_white"
            android:visibility="gone" />

        <Button
            android:id="@+id/dan_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:background="@mipmap/icon_dan"
            android:contentDescription="@string/cd_btn_camera_switcher"
            android:textColor="@color/pldroid_streaming_white" />

        <Button
            android:id="@+id/camera_switch_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:background="@mipmap/icon_back"
            android:contentDescription="@string/cd_btn_camera_switcher"
            android:textColor="@color/pldroid_streaming_white" />

        <Button
            android:id="@+id/torch_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:background="@mipmap/icon_open_light"
            android:contentDescription="@string/cd_btn_torch"
            android:text=""
            android:textColor="@color/pldroid_streaming_white"
            android:visibility="gone" />

        <Button
            android:id="@+id/orientation_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:background="@mipmap/icon_land_post"
            android:contentDescription="@string/cd_btn_orientation"
            android:textColor="@color/pldroid_streaming_white" />

        <Button
            android:id="@+id/mute_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:contentDescription="@string/cd_btn_mute"
            android:textColor="@color/pldroid_streaming_white"
            android:visibility="gone" />

        <Button
            android:id="@+id/fb_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:contentDescription="@string/cd_btn_fb"
            android:textColor="@color/pldroid_streaming_white"
            android:visibility="gone" />

        <Button
            android:id="@+id/capture_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:background="@mipmap/icon_capture"
            android:contentDescription="@string/cd_btn_capture"
            android:textColor="@color/pldroid_streaming_white" />
    </LinearLayout>-->

    <SeekBar
        android:id="@+id/beautyLevel_seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="60dp"
        android:max="100"
        android:progress="100"
        android:visibility="gone" />

    <include
        layout="@layout/camera_button_holder"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <com.medmeeting.m.zhiyi.UI.LiveView.live.liveshow.ui.widget.ChatListView
            android:id="@+id/chat_listview"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:divider="@null"
            android:listSelector="@android:color/transparent"
            android:scrollbars="none"
            android:layout_marginLeft="20dp"
            android:transcriptMode="alwaysScroll"
            android:layout_above="@+id/bottom_bar"
            android:layout_alignStart="@+id/bottom_bar" />

        <fragment
            android:id="@+id/bottom_bar"
            android:name="com.medmeeting.m.zhiyi.UI.LiveView.live.fragment.BottomPanelFragment2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"/>

    </RelativeLayout>

</FrameLayout>
